--- a/board/templates/board/repository_detail.html
+++ b/board/templates/board/repository_detail.html
@@ -9,6 +9,8 @@
         <tbody>
         {% for introduction in repository.introduction_set.all %}
             <tr>
+                <td><a href="{% url 'board:introduction_modify' repository_pk=repository.pk pk=introduction.pk %}"><i class="btn bi-success">수정</i></a></td>
+
                 <td>제목: <a href="{% url 'board:introduction_detail' repository_pk=repository.pk pk=introduction.pk %}">{{ introduction.version }}</a></td>
                 <td><a href="{% url 'board:introduction_delete' repository_pk=repository.pk pk=introduction.pk %}"><i class="bi bi-trash"></i></a></td>
             </tr>
