--- a/board/static/polls/intro_detail.css
+++ b/board/static/polls/intro_detail.css
@@ -1,26 +1,21 @@
-body {
-	margin:20px;
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
-div {
-	width: 100%;
-	height: 500px;
+.button1 {
+  background-color: white;
+  color: black;
+  border: 2px solid #4CAF50;
 }
-div.left {
-	width: 50%;
-	float: left;
-	box-sizing: border-box;
-}
-div.right {
-	width: 50%;
-	margin-top: 100px;
-	float: right;
-	box-sizing: border-box;
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-image: url("../img/background.jpg");
-}
-
 
 table.type10 {
 	border-collapse: collapse;
@@ -51,11 +46,4 @@ table.type10 td {
 }
 table.type10 .even {
 	background: #aee5bf;
-}
-p {
-	font-family: "Nanum Gothic", sans-serif;
-	font-size: 20px;
-}
-p.a {
-	font-weight: 400;
 }
