--- a/board/templates/board/introduction_create.html
+++ b/board/templates/board/introduction_create.html
@@ -1,10 +1,14 @@
 {% extends 'base.html' %}
 
-{% block title %}Add Introduction{% endblock %}
+{% block title %}글 쓰기{% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
+
+        <label for="your_name">Your name: </label>
+        <input id="your_name" type="text" name="title" value="{{ introduction.title }}">
+        <input type="submit" value="OK">
         {{ form.as_p }}
         <button type="submit">글 쓰기</button>
     </form>
