--- a/board/templates/board/introduction_update.html
+++ b/board/templates/board/introduction_update.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Update Introduction{% endblock %}
+{% block title %}글 수정{% endblock %}
 
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_ul }}
-        <button type="submit">Update</button>
+        <button type="submit">글 수정하기</button>
     </form>
 {% endblock %}
