--- a/board/templates/board/repository_list.html
+++ b/board/templates/board/repository_list.html
@@ -6,10 +6,7 @@
     {%  load staticfiles %}
     {%  load static %}
     <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic:400,700,800&amp;subset=korean" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="{% static 'polls/intro_detail.css' %}">
-    <meta name="viewport"
-          content="width=device-width, height=device-height,
-                     minimum-scale=1.0, maximum-scale=1.0, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/repository_list.css' %}">
     <div>
         <div class="left">
             <br>
@@ -41,7 +38,6 @@
             </table>
         </div>
         <div class="right">
-
         </div>
     </div>
 {% endblock %}
