--- a/board/templates/board/comment_create.html
+++ b/board/templates/board/comment_create.html
@@ -4,6 +4,9 @@
 
 {% block content %}
     <form action="" method="post">
+        {%  load staticfiles %}
+    {%  load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/form.css' %}">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit">댓글 추가</button>
