--- a/board/templates/board/introduction_confirm_delete.html
+++ b/board/templates/board/introduction_confirm_delete.html
@@ -3,9 +3,12 @@
 {% block title %}글 삭제{% endblock %}
 
 {% block content %}
+    {%  load staticfiles %}
+    {%  load static %}
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/form.css' %}">
     <form action="" method="post">
         {% csrf_token %}
-        "{{ introduction }}"를 삭제하시겠습니까?
+        {{ introduction.access }}님의 "{{ introduction.title }}"를 삭제하시겠습니까?
         <button type="submit">삭제</button>
         <button type="button" onclick="history.back();">취소</button>
     </form>
