--- a/board/templates/board/introduction_detail.html
+++ b/board/templates/board/introduction_detail.html
@@ -1,28 +1,26 @@
 {% extends 'base.html' %}
 
-{% block title %}Detail Introduction{% endblock %}
+{% block title %}글 상세{% endblock %}
 
 {% block content %}
         {%  load staticfiles %}
     {%  load static %}
-        <link rel="stylesheet" type="text/css" href="{% static 'polls/intro_detail.css' %}">
-        <a href="{% url 'board:repository_list' %} "><img src="{% static 'img/logo.png' %}" style="width: 200px; "></a>
+    <link rel="stylesheet" type="text/css" href="{% static 'polls/intro_detail.css' %}"
+          xmlns="http://www.w3.org/1999/html">
+
+        <a href="{% url 'board:repository_detail' pk=introduction.repository_id %} "><img src="{% static 'img/back.png' %}"></a>
     <br>
     <table class="type09">
   <thead>
   <tr>
-    <th scope="cols">타이틀</th>
-    <th scope="cols">내용</th>
+    <th scope="cols">    {{ introduction.repository }}</th>
+    <th scope="cols"> </th>
   </tr>
   </thead>
   <tbody>
   <tr>
     <th scope="row">제목</th>
     <td>{{ introduction.title }}</td>
-  </tr>
-  <tr>
-    <th scope="row">주제</th>
-    <td>    {{ introduction.repository }}</td>
   </tr>
   <tr>
     <th scope="row">글 번호</th>
@@ -40,13 +38,16 @@
 </table>
     <br>
     <a href="{% url 'board:comment_add' repository_pk=introduction.repository_id introduction_pk=introduction.pk %}"><button class="button button1">댓글 달기</button></a>
+    <a href="{% url 'board:introduction_modify' repository_pk=introduction.repository_id pk=introduction.pk %} "><button class="button button1">수정</button></a>
+    <a href="{% url 'board:introduction_delete' repository_pk=introduction.repository_id pk=introduction.pk %}"><button class="button button1">삭제</button></a>
+
     <table class="type10">
         <tbody>
         {% for comment in introduction.comment_set.all %}
             <tr>
                 <td>{{ comment.comment }}</td>
-                <td><a href="{% url 'board:comment_modify' repository_pk=introduction.repository_id introduction_pk=introduction.pk pk=comment.pk %}" class="btn btn-success">수정</a></td>
-                <td><a href="{% url 'board:comment_delete' repository_pk=introduction.repository_id introduction_pk=introduction.pk pk=comment.pk %}" class="btn btn-danger">삭제</a></td>
+                <td><a href="{% url 'board:comment_modify' repository_pk=introduction.repository_id introduction_pk=introduction.pk pk=comment.pk %}"><button class="button button1">댓글 수정</button></a></td>
+                <td><a href="{% url 'board:comment_delete' repository_pk=introduction.repository_id introduction_pk=introduction.pk pk=comment.pk %}"><button class="button button1">댓글 삭제</button></a></td>
             </tr>
         {% endfor %}
         </tbody>
