--- a/board/templates/board/introduction_detail.html
+++ b/board/templates/board/introduction_detail.html
@@ -24,7 +24,7 @@
   </tr>
   <tr>
     <th scope="row">글 번호</th>
-    <td>{{ introduction.version }}</td>
+    <td>{{ introduction.number }}</td>
   </tr>
   <tr>
     <th scope="row">글 내용</th>
@@ -32,7 +32,7 @@
   </tr>
   <tr>
     <th scope="row">작성자</th>
-    <td>{{ introduction.access }}</td>
+    <td>{{ introduction.writer }}</td>
   </tr>
   </tbody>
 </table>
