--- a/board/templates/board/repository_detail.html
+++ b/board/templates/board/repository_detail.html
@@ -24,9 +24,9 @@
         {% for introduction in repository.introduction_set.all %}
             <tr>
                 {#   <td><a href="#}{#  url 'board:introduction_modify' repository_pk=repository.pk pk=introduction.pk #} {#  "><i class="btn bi-success">수정</i></a></td>  #}
-                <td>{{ introduction.version}}</td>
+                <td>{{ introduction.number}}</td>
                 <td>  <a href="{% url 'board:introduction_detail' repository_pk=repository.pk pk=introduction.pk %}" style="color: #124b12">{{ introduction.title }}</a></td>
-                <td>{{ introduction.access}}</td>
+                <td>{{ introduction.writer}}</td>
                 {#  <td><a href="#}{#  url 'board:introduction_delete' repository_pk=repository.pk pk=introduction.pk #} {#"><i class="bi bi-trash"></i></a></td> #}
             </tr>
         {% endfor %}
