--- a/board/templates/board/introduction_confirm_delete.html
+++ b/board/templates/board/introduction_confirm_delete.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="{% static 'polls/form.css' %}">
     <form action="" method="post">
         {% csrf_token %}
-        {{ introduction.access }}님의 "{{ introduction.title }}"를 삭제하시겠습니까?
+        {{ introduction.writer }}님의 "{{ introduction.title }}"를 삭제하시겠습니까?
         <button type="submit">삭제</button>
         <button type="button" onclick="history.back();">취소</button>
     </form>
