--- a/board/templates/board/introduction_update.html
+++ b/board/templates/board/introduction_update.html
@@ -12,6 +12,8 @@
         <p>글 수정하기<p>
         <hr>
         {{ form.as_p }}
-        <button type="submit">저장</button>
+        <button type="submit" class="button button1">저장</button>
+        <button type="button" onclick="history.back();" class="button button1">취소</button>
+
     </form>
 {% endblock %}
