--- a/board/templates/board/repository_create.html
+++ b/board/templates/board/repository_create.html
@@ -6,6 +6,6 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Add</button>
+        <button type="submit" class="button button1">Add</button>
     </form>
 {% endblock %}
