--- a/board/static/polls/intro_detail.css
+++ b/board/static/polls/intro_detail.css
@@ -16,9 +16,10 @@ body {
 }
 
 .button1 {
+    border-radius: 5px;
   background-color: white;
   color: black;
-  border: 2px solid gray;
+  border: 2px solid darkgreen;
 }
 
 table.type10 {
