--- a/board/templates/board/repository_update.html
+++ b/board/templates/board/repository_update.html
@@ -6,6 +6,6 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_ul }}
-        <button type="submit">Update</button>
+        <button type="submit" class="button button1"> Update</button>
     </form>
 {% endblock %}
